--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,169 +1,158 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="md_theme_primary">#A6D1AB</color>
-    <color name="md_theme_onPrimary">#11381D</color>
-    <color name="md_theme_primaryContainer">#153B20</color>
-    <color name="md_theme_onPrimaryContainer">#A3CDA8</color>
-    <color name="md_theme_secondary">#BACBB9</color>
-    <color name="md_theme_onSecondary">#253427</color>
-    <color name="md_theme_secondaryContainer">#324134</color>
-    <color name="md_theme_onSecondaryContainer">#C5D6C4</color>
-    <color name="md_theme_tertiary">#A8CAEC</color>
-    <color name="md_theme_onTertiary">#0B334E</color>
-    <color name="md_theme_tertiaryContainer">#113752</color>
-    <color name="md_theme_onTertiaryContainer">#A5C7E9</color>
+    <color name="md_theme_primary">#A4C8FF</color>
+    <color name="md_theme_onPrimary">#00315E</color>
+    <color name="md_theme_primaryContainer">#306BAF</color>
+    <color name="md_theme_onPrimaryContainer">#FFFFFF</color>
+    <color name="md_theme_secondary">#B4C8E8</color>
+    <color name="md_theme_onSecondary">#1E314B</color>
+    <color name="md_theme_secondaryContainer">#2D405A</color>
+    <color name="md_theme_onSecondaryContainer">#C2D5F6</color>
+    <color name="md_theme_tertiary">#FFB4A9</color>
+    <color name="md_theme_onTertiary">#690001</color>
+    <color name="md_theme_tertiaryContainer">#C30005</color>
+    <color name="md_theme_onTertiaryContainer">#FFFFFF</color>
     <color name="md_theme_error">#FFB4AB</color>
     <color name="md_theme_onError">#690005</color>
     <color name="md_theme_errorContainer">#93000A</color>
     <color name="md_theme_onErrorContainer">#FFDAD6</color>
-    <color name="md_theme_background">#121411</color>
-    <color name="md_theme_onBackground">#E2E3DE</color>
-    <color name="md_theme_surface">#121411</color>
-    <color name="md_theme_onSurface">#E2E3DE</color>
-    <color name="md_theme_surfaceVariant">#424941</color>
-    <color name="md_theme_onSurfaceVariant">#C2C8BF</color>
-    <color name="md_theme_outline">#8C938A</color>
-    <color name="md_theme_outlineVariant">#424941</color>
+    <color name="md_theme_background">#111318</color>
+    <color name="md_theme_onBackground">#E1E2E8</color>
+    <color name="md_theme_surface">#111318</color>
+    <color name="md_theme_onSurface">#E1E2E8</color>
+    <color name="md_theme_surfaceVariant">#424750</color>
+    <color name="md_theme_onSurfaceVariant">#C2C6D2</color>
+    <color name="md_theme_outline">#8C919C</color>
+    <color name="md_theme_outlineVariant">#424750</color>
     <color name="md_theme_scrim">#000000</color>
-    <color name="md_theme_inverseSurface">#E2E3DE</color>
-    <color name="md_theme_inverseOnSurface">#2F312E</color>
-    <color name="md_theme_inversePrimary">#406748</color>
-    <color name="md_theme_primaryFixed">#C2EDC6</color>
-    <color name="md_theme_onPrimaryFixed">#00210B</color>
-    <color name="md_theme_primaryFixedDim">#A6D1AB</color>
-    <color name="md_theme_onPrimaryFixedVariant">#294F32</color>
-    <color name="md_theme_secondaryFixed">#D6E7D4</color>
-    <color name="md_theme_onSecondaryFixed">#101F13</color>
-    <color name="md_theme_secondaryFixedDim">#BACBB9</color>
-    <color name="md_theme_onSecondaryFixedVariant">#3B4B3D</color>
-    <color name="md_theme_tertiaryFixed">#CDE5FF</color>
-    <color name="md_theme_onTertiaryFixed">#001D32</color>
-    <color name="md_theme_tertiaryFixedDim">#A8CAEC</color>
-    <color name="md_theme_onTertiaryFixedVariant">#274A66</color>
-    <color name="md_theme_surfaceDim">#121411</color>
-    <color name="md_theme_surfaceBright">#383A37</color>
-    <color name="md_theme_surfaceContainerLowest">#0C0F0C</color>
-    <color name="md_theme_surfaceContainerLow">#1A1C1A</color>
-    <color name="md_theme_surfaceContainer">#1E201D</color>
-    <color name="md_theme_surfaceContainerHigh">#282B28</color>
-    <color name="md_theme_surfaceContainerHighest">#333532</color>
-    <color name="md_theme_primary_mediumContrast">#AAD5AF</color>
-    <color name="md_theme_onPrimary_mediumContrast">#001B08</color>
-    <color name="md_theme_primaryContainer_mediumContrast">#729A78</color>
+    <color name="md_theme_inverseSurface">#E1E2E8</color>
+    <color name="md_theme_inverseOnSurface">#2E3035</color>
+    <color name="md_theme_inversePrimary">#2160A3</color>
+    <color name="md_theme_primaryFixed">#D4E3FF</color>
+    <color name="md_theme_onPrimaryFixed">#001C3A</color>
+    <color name="md_theme_primaryFixedDim">#A4C8FF</color>
+    <color name="md_theme_onPrimaryFixedVariant">#004784</color>
+    <color name="md_theme_secondaryFixed">#D4E3FF</color>
+    <color name="md_theme_onSecondaryFixed">#061C35</color>
+    <color name="md_theme_secondaryFixedDim">#B4C8E8</color>
+    <color name="md_theme_onSecondaryFixedVariant">#354862</color>
+    <color name="md_theme_tertiaryFixed">#FFDAD5</color>
+    <color name="md_theme_onTertiaryFixed">#410000</color>
+    <color name="md_theme_tertiaryFixedDim">#FFB4A9</color>
+    <color name="md_theme_onTertiaryFixedVariant">#930002</color>
+    <color name="md_theme_surfaceDim">#111318</color>
+    <color name="md_theme_surfaceBright">#37393E</color>
+    <color name="md_theme_surfaceContainerLowest">#0C0E13</color>
+    <color name="md_theme_surfaceContainerLow">#191C20</color>
+    <color name="md_theme_surfaceContainer">#1D2024</color>
+    <color name="md_theme_surfaceContainerHigh">#282A2F</color>
+    <color name="md_theme_surfaceContainerHighest">#32353A</color>
+    <color name="md_theme_primary_mediumContrast">#ACCDFF</color>
+    <color name="md_theme_onPrimary_mediumContrast">#001730</color>
+    <color name="md_theme_primaryContainer_mediumContrast">#5D93DA</color>
     <color name="md_theme_onPrimaryContainer_mediumContrast">#000000</color>
-    <color name="md_theme_secondary_mediumContrast">#BECFBD</color>
-    <color name="md_theme_onSecondary_mediumContrast">#0B190E</color>
-    <color name="md_theme_secondaryContainer_mediumContrast">#849584</color>
+    <color name="md_theme_secondary_mediumContrast">#B9CCEC</color>
+    <color name="md_theme_onSecondary_mediumContrast">#02172F</color>
+    <color name="md_theme_secondaryContainer_mediumContrast">#7F92B0</color>
     <color name="md_theme_onSecondaryContainer_mediumContrast">#000000</color>
-    <color name="md_theme_tertiary_mediumContrast">#ACCEF1</color>
-    <color name="md_theme_onTertiary_mediumContrast">#00182A</color>
-    <color name="md_theme_tertiaryContainer_mediumContrast">#7394B4</color>
+    <color name="md_theme_tertiary_mediumContrast">#FFBAB0</color>
+    <color name="md_theme_onTertiary_mediumContrast">#370000</color>
+    <color name="md_theme_tertiaryContainer_mediumContrast">#FF5543</color>
     <color name="md_theme_onTertiaryContainer_mediumContrast">#000000</color>
     <color name="md_theme_error_mediumContrast">#FFBAB1</color>
     <color name="md_theme_onError_mediumContrast">#370001</color>
     <color name="md_theme_errorContainer_mediumContrast">#FF5449</color>
     <color name="md_theme_onErrorContainer_mediumContrast">#000000</color>
-    <color name="md_theme_background_mediumContrast">#121411</color>
-    <color name="md_theme_onBackground_mediumContrast">#E2E3DE</color>
-    <color name="md_theme_surface_mediumContrast">#121411</color>
-    <color name="md_theme_onSurface_mediumContrast">#FBFBF6</color>
-    <color name="md_theme_surfaceVariant_mediumContrast">#424941</color>
-    <color name="md_theme_onSurfaceVariant_mediumContrast">#C6CDC3</color>
-    <color name="md_theme_outline_mediumContrast">#9EA59C</color>
-    <color name="md_theme_outlineVariant_mediumContrast">#7E857D</color>
+    <color name="md_theme_background_mediumContrast">#111318</color>
+    <color name="md_theme_onBackground_mediumContrast">#E1E2E8</color>
+    <color name="md_theme_surface_mediumContrast">#111318</color>
+    <color name="md_theme_onSurface_mediumContrast">#FBFAFF</color>
+    <color name="md_theme_surfaceVariant_mediumContrast">#424750</color>
+    <color name="md_theme_onSurfaceVariant_mediumContrast">#C6CBD6</color>
+    <color name="md_theme_outline_mediumContrast">#9EA3AE</color>
+    <color name="md_theme_outlineVariant_mediumContrast">#7E838E</color>
     <color name="md_theme_scrim_mediumContrast">#000000</color>
-    <color name="md_theme_inverseSurface_mediumContrast">#E2E3DE</color>
-    <color name="md_theme_inverseOnSurface_mediumContrast">#282B28</color>
-    <color name="md_theme_inversePrimary_mediumContrast">#2A5033</color>
-    <color name="md_theme_primaryFixed_mediumContrast">#C2EDC6</color>
-    <color name="md_theme_onPrimaryFixed_mediumContrast">#001506</color>
-    <color name="md_theme_primaryFixedDim_mediumContrast">#A6D1AB</color>
-    <color name="md_theme_onPrimaryFixedVariant_mediumContrast">#173E22</color>
-    <color name="md_theme_secondaryFixed_mediumContrast">#D6E7D4</color>
-    <color name="md_theme_onSecondaryFixed_mediumContrast">#061409</color>
-    <color name="md_theme_secondaryFixedDim_mediumContrast">#BACBB9</color>
-    <color name="md_theme_onSecondaryFixedVariant_mediumContrast">#2B3A2D</color>
-    <color name="md_theme_tertiaryFixed_mediumContrast">#CDE5FF</color>
-    <color name="md_theme_onTertiaryFixed_mediumContrast">#001222</color>
-    <color name="md_theme_tertiaryFixedDim_mediumContrast">#A8CAEC</color>
-    <color name="md_theme_onTertiaryFixedVariant_mediumContrast">#133954</color>
-    <color name="md_theme_surfaceDim_mediumContrast">#121411</color>
-    <color name="md_theme_surfaceBright_mediumContrast">#383A37</color>
-    <color name="md_theme_surfaceContainerLowest_mediumContrast">#0C0F0C</color>
-    <color name="md_theme_surfaceContainerLow_mediumContrast">#1A1C1A</color>
-    <color name="md_theme_surfaceContainer_mediumContrast">#1E201D</color>
-    <color name="md_theme_surfaceContainerHigh_mediumContrast">#282B28</color>
-    <color name="md_theme_surfaceContainerHighest_mediumContrast">#333532</color>
-    <color name="md_theme_primary_highContrast">#F0FFED</color>
+    <color name="md_theme_inverseSurface_mediumContrast">#E1E2E8</color>
+    <color name="md_theme_inverseOnSurface_mediumContrast">#282A2F</color>
+    <color name="md_theme_inversePrimary_mediumContrast">#004986</color>
+    <color name="md_theme_primaryFixed_mediumContrast">#D4E3FF</color>
+    <color name="md_theme_onPrimaryFixed_mediumContrast">#001128</color>
+    <color name="md_theme_primaryFixedDim_mediumContrast">#A4C8FF</color>
+    <color name="md_theme_onPrimaryFixedVariant_mediumContrast">#003768</color>
+    <color name="md_theme_secondaryFixed_mediumContrast">#D4E3FF</color>
+    <color name="md_theme_onSecondaryFixed_mediumContrast">#001128</color>
+    <color name="md_theme_secondaryFixedDim_mediumContrast">#B4C8E8</color>
+    <color name="md_theme_onSecondaryFixedVariant_mediumContrast">#243751</color>
+    <color name="md_theme_tertiaryFixed_mediumContrast">#FFDAD5</color>
+    <color name="md_theme_onTertiaryFixed_mediumContrast">#2D0000</color>
+    <color name="md_theme_tertiaryFixedDim_mediumContrast">#FFB4A9</color>
+    <color name="md_theme_onTertiaryFixedVariant_mediumContrast">#740001</color>
+    <color name="md_theme_surfaceDim_mediumContrast">#111318</color>
+    <color name="md_theme_surfaceBright_mediumContrast">#37393E</color>
+    <color name="md_theme_surfaceContainerLowest_mediumContrast">#0C0E13</color>
+    <color name="md_theme_surfaceContainerLow_mediumContrast">#191C20</color>
+    <color name="md_theme_surfaceContainer_mediumContrast">#1D2024</color>
+    <color name="md_theme_surfaceContainerHigh_mediumContrast">#282A2F</color>
+    <color name="md_theme_surfaceContainerHighest_mediumContrast">#32353A</color>
+    <color name="md_theme_primary_highContrast">#FBFAFF</color>
     <color name="md_theme_onPrimary_highContrast">#000000</color>
-    <color name="md_theme_primaryContainer_highContrast">#AAD5AF</color>
+    <color name="md_theme_primaryContainer_highContrast">#ACCDFF</color>
     <color name="md_theme_onPrimaryContainer_highContrast">#000000</color>
-    <color name="md_theme_secondary_highContrast">#F0FFED</color>
+    <color name="md_theme_secondary_highContrast">#FBFAFF</color>
     <color name="md_theme_onSecondary_highContrast">#000000</color>
-    <color name="md_theme_secondaryContainer_highContrast">#BECFBD</color>
+    <color name="md_theme_secondaryContainer_highContrast">#B9CCEC</color>
     <color name="md_theme_onSecondaryContainer_highContrast">#000000</color>
-    <color name="md_theme_tertiary_highContrast">#F9FAFF</color>
+    <color name="md_theme_tertiary_highContrast">#FFF9F8</color>
     <color name="md_theme_onTertiary_highContrast">#000000</color>
-    <color name="md_theme_tertiaryContainer_highContrast">#ACCEF1</color>
+    <color name="md_theme_tertiaryContainer_highContrast">#FFBAB0</color>
     <color name="md_theme_onTertiaryContainer_highContrast">#000000</color>
     <color name="md_theme_error_highContrast">#FFF9F9</color>
     <color name="md_theme_onError_highContrast">#000000</color>
     <color name="md_theme_errorContainer_highContrast">#FFBAB1</color>
     <color name="md_theme_onErrorContainer_highContrast">#000000</color>
-    <color name="md_theme_background_highContrast">#121411</color>
-    <color name="md_theme_onBackground_highContrast">#E2E3DE</color>
-    <color name="md_theme_surface_highContrast">#121411</color>
+    <color name="md_theme_background_highContrast">#111318</color>
+    <color name="md_theme_onBackground_highContrast">#E1E2E8</color>
+    <color name="md_theme_surface_highContrast">#111318</color>
     <color name="md_theme_onSurface_highContrast">#FFFFFF</color>
-    <color name="md_theme_surfaceVariant_highContrast">#424941</color>
-    <color name="md_theme_onSurfaceVariant_highContrast">#F6FDF2</color>
-    <color name="md_theme_outline_highContrast">#C6CDC3</color>
-    <color name="md_theme_outlineVariant_highContrast">#C6CDC3</color>
+    <color name="md_theme_surfaceVariant_highContrast">#424750</color>
+    <color name="md_theme_onSurfaceVariant_highContrast">#FBFAFF</color>
+    <color name="md_theme_outline_highContrast">#C6CBD6</color>
+    <color name="md_theme_outlineVariant_highContrast">#C6CBD6</color>
     <color name="md_theme_scrim_highContrast">#000000</color>
-    <color name="md_theme_inverseSurface_highContrast">#E2E3DE</color>
+    <color name="md_theme_inverseSurface_highContrast">#E1E2E8</color>
     <color name="md_theme_inverseOnSurface_highContrast">#000000</color>
-    <color name="md_theme_inversePrimary_highContrast">#093117</color>
-    <color name="md_theme_primaryFixed_highContrast">#C6F2CA</color>
+    <color name="md_theme_inversePrimary_highContrast">#002A53</color>
+    <color name="md_theme_primaryFixed_highContrast">#DBE7FF</color>
     <color name="md_theme_onPrimaryFixed_highContrast">#000000</color>
-    <color name="md_theme_primaryFixedDim_highContrast">#AAD5AF</color>
-    <color name="md_theme_onPrimaryFixedVariant_highContrast">#001B08</color>
-    <color name="md_theme_secondaryFixed_highContrast">#DAECD9</color>
+    <color name="md_theme_primaryFixedDim_highContrast">#ACCDFF</color>
+    <color name="md_theme_onPrimaryFixedVariant_highContrast">#001730</color>
+    <color name="md_theme_secondaryFixed_highContrast">#DBE7FF</color>
     <color name="md_theme_onSecondaryFixed_highContrast">#000000</color>
-    <color name="md_theme_secondaryFixedDim_highContrast">#BECFBD</color>
-    <color name="md_theme_onSecondaryFixedVariant_highContrast">#0B190E</color>
-    <color name="md_theme_tertiaryFixed_highContrast">#D5E9FF</color>
+    <color name="md_theme_secondaryFixedDim_highContrast">#B9CCEC</color>
+    <color name="md_theme_onSecondaryFixedVariant_highContrast">#02172F</color>
+    <color name="md_theme_tertiaryFixed_highContrast">#FFE0DB</color>
     <color name="md_theme_onTertiaryFixed_highContrast">#000000</color>
-    <color name="md_theme_tertiaryFixedDim_highContrast">#ACCEF1</color>
-    <color name="md_theme_onTertiaryFixedVariant_highContrast">#00182A</color>
-    <color name="md_theme_surfaceDim_highContrast">#121411</color>
-    <color name="md_theme_surfaceBright_highContrast">#383A37</color>
-    <color name="md_theme_surfaceContainerLowest_highContrast">#0C0F0C</color>
-    <color name="md_theme_surfaceContainerLow_highContrast">#1A1C1A</color>
-    <color name="md_theme_surfaceContainer_highContrast">#1E201D</color>
-    <color name="md_theme_surfaceContainerHigh_highContrast">#282B28</color>
-    <color name="md_theme_surfaceContainerHighest_highContrast">#333532</color>
-    <color name="colorCustomPrimary1">#A6D1AB</color>
-    <color name="colorOnCustomPrimary1">#11381D</color>
-    <color name="colorCustomPrimary1Container">#153B20</color>
-    <color name="colorOnCustomPrimary1Container">#A3CDA8</color>
-    <color name="colorCustomPrimary2">#B2CF9C</color>
-    <color name="colorOnCustomPrimary2">#1F3612</color>
-    <color name="colorCustomPrimary2Container">#324B24</color>
-    <color name="colorOnCustomPrimary2Container">#C7E5B1</color>
-    <color name="colorCustomPrimary1_mediumContrast">#AAD5AF</color>
-    <color name="colorOnCustomPrimary1_mediumContrast">#001B08</color>
-    <color name="colorCustomPrimary1Container_mediumContrast">#729A78</color>
-    <color name="colorOnCustomPrimary1Container_mediumContrast">#000000</color>
-    <color name="colorCustomPrimary2_mediumContrast">#B6D4A0</color>
-    <color name="colorOnCustomPrimary2_mediumContrast">#061B00</color>
-    <color name="colorCustomPrimary2Container_mediumContrast">#7D996A</color>
-    <color name="colorOnCustomPrimary2Container_mediumContrast">#000000</color>
-    <color name="colorCustomPrimary1_highContrast">#F0FFED</color>
-    <color name="colorOnCustomPrimary1_highContrast">#000000</color>
-    <color name="colorCustomPrimary1Container_highContrast">#AAD5AF</color>
-    <color name="colorOnCustomPrimary1Container_highContrast">#000000</color>
-    <color name="colorCustomPrimary2_highContrast">#F2FFE4</color>
-    <color name="colorOnCustomPrimary2_highContrast">#000000</color>
-    <color name="colorCustomPrimary2Container_highContrast">#B6D4A0</color>
-    <color name="colorOnCustomPrimary2Container_highContrast">#000000</color>
+    <color name="md_theme_tertiaryFixedDim_highContrast">#FFBAB0</color>
+    <color name="md_theme_onTertiaryFixedVariant_highContrast">#370000</color>
+    <color name="md_theme_surfaceDim_highContrast">#111318</color>
+    <color name="md_theme_surfaceBright_highContrast">#37393E</color>
+    <color name="md_theme_surfaceContainerLowest_highContrast">#0C0E13</color>
+    <color name="md_theme_surfaceContainerLow_highContrast">#191C20</color>
+    <color name="md_theme_surfaceContainer_highContrast">#1D2024</color>
+    <color name="md_theme_surfaceContainerHigh_highContrast">#282A2F</color>
+    <color name="md_theme_surfaceContainerHighest_highContrast">#32353A</color>
+    <color name="colorUFCColor">#FFB4A9</color>
+    <color name="colorOnUFCColor">#690001</color>
+    <color name="colorUFCColorContainer">#C30005</color>
+    <color name="colorOnUFCColorContainer">#FFFFFF</color>
+    <color name="colorUFCColor_mediumContrast">#FFBAB0</color>
+    <color name="colorOnUFCColor_mediumContrast">#370000</color>
+    <color name="colorUFCColorContainer_mediumContrast">#FF5543</color>
+    <color name="colorOnUFCColorContainer_mediumContrast">#000000</color>
+    <color name="colorUFCColor_highContrast">#FFF9F8</color>
+    <color name="colorOnUFCColor_highContrast">#000000</color>
+    <color name="colorUFCColorContainer_highContrast">#FFBAB0</color>
+    <color name="colorOnUFCColorContainer_highContrast">#000000</color>
 
+    <color name="mainUFCColor">#D20A0A</color>
 </resources>
