--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <attr name="colorCustomPrimary1" format="color" />
-    <attr name="colorOnCustomPrimary1" format="color" />
-    <attr name="colorCustomPrimary1Container" format="color" />
-    <attr name="colorOnCustomPrimary1Container" format="color" />
-    <attr name="colorCustomPrimary2" format="color" />
-    <attr name="colorOnCustomPrimary2" format="color" />
-    <attr name="colorCustomPrimary2Container" format="color" />
-    <attr name="colorOnCustomPrimary2Container" format="color" />
+    <attr name="colorUFCColor" format="color" />
+    <attr name="colorOnUFCColor" format="color" />
+    <attr name="colorUFCColorContainer" format="color" />
+    <attr name="colorOnUFCColorContainer" format="color" />
 </resources>
