--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,169 +1,158 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="md_theme_primary">#0B3218</color>
+    <color name="md_theme_primary">#005092</color>
     <color name="md_theme_onPrimary">#FFFFFF</color>
-    <color name="md_theme_primaryContainer">#2F5538</color>
-    <color name="md_theme_onPrimaryContainer">#CAF6CE</color>
-    <color name="md_theme_secondary">#526254</color>
+    <color name="md_theme_primaryContainer">#3C75BA</color>
+    <color name="md_theme_onPrimaryContainer">#FFFFFF</color>
+    <color name="md_theme_secondary">#4D5F7B</color>
     <color name="md_theme_onSecondary">#FFFFFF</color>
-    <color name="md_theme_secondaryContainer">#D7E8D5</color>
-    <color name="md_theme_onSecondaryContainer">#3D4C3E</color>
-    <color name="md_theme_tertiary">#032E49</color>
+    <color name="md_theme_secondaryContainer">#D2E2FF</color>
+    <color name="md_theme_onSecondaryContainer">#364863</color>
+    <color name="md_theme_tertiary">#900002</color>
     <color name="md_theme_onTertiary">#FFFFFF</color>
-    <color name="md_theme_tertiaryContainer">#2E506D</color>
-    <color name="md_theme_onTertiaryContainer">#DCECFF</color>
+    <color name="md_theme_tertiaryContainer">#D20A0A</color>
+    <color name="md_theme_onTertiaryContainer">#FFFFFF</color>
     <color name="md_theme_error">#BA1A1A</color>
     <color name="md_theme_onError">#FFFFFF</color>
     <color name="md_theme_errorContainer">#FFDAD6</color>
     <color name="md_theme_onErrorContainer">#410002</color>
-    <color name="md_theme_background">#F9FAF5</color>
-    <color name="md_theme_onBackground">#1A1C1A</color>
-    <color name="md_theme_surface">#F9FAF5</color>
-    <color name="md_theme_onSurface">#1A1C1A</color>
-    <color name="md_theme_surfaceVariant">#DEE4DB</color>
-    <color name="md_theme_onSurfaceVariant">#424941</color>
-    <color name="md_theme_outline">#727971</color>
-    <color name="md_theme_outlineVariant">#C2C8BF</color>
+    <color name="md_theme_background">#F9F9FF</color>
+    <color name="md_theme_onBackground">#191C20</color>
+    <color name="md_theme_surface">#F9F9FF</color>
+    <color name="md_theme_onSurface">#191C20</color>
+    <color name="md_theme_surfaceVariant">#DEE2EE</color>
+    <color name="md_theme_onSurfaceVariant">#424750</color>
+    <color name="md_theme_outline">#727782</color>
+    <color name="md_theme_outlineVariant">#C2C6D2</color>
     <color name="md_theme_scrim">#000000</color>
-    <color name="md_theme_inverseSurface">#2F312E</color>
-    <color name="md_theme_inverseOnSurface">#F1F1EC</color>
-    <color name="md_theme_inversePrimary">#A6D1AB</color>
-    <color name="md_theme_primaryFixed">#C2EDC6</color>
-    <color name="md_theme_onPrimaryFixed">#00210B</color>
-    <color name="md_theme_primaryFixedDim">#A6D1AB</color>
-    <color name="md_theme_onPrimaryFixedVariant">#294F32</color>
-    <color name="md_theme_secondaryFixed">#D6E7D4</color>
-    <color name="md_theme_onSecondaryFixed">#101F13</color>
-    <color name="md_theme_secondaryFixedDim">#BACBB9</color>
-    <color name="md_theme_onSecondaryFixedVariant">#3B4B3D</color>
-    <color name="md_theme_tertiaryFixed">#CDE5FF</color>
-    <color name="md_theme_onTertiaryFixed">#001D32</color>
-    <color name="md_theme_tertiaryFixedDim">#A8CAEC</color>
-    <color name="md_theme_onTertiaryFixedVariant">#274A66</color>
-    <color name="md_theme_surfaceDim">#DADAD6</color>
-    <color name="md_theme_surfaceBright">#F9FAF5</color>
+    <color name="md_theme_inverseSurface">#2E3035</color>
+    <color name="md_theme_inverseOnSurface">#F0F0F7</color>
+    <color name="md_theme_inversePrimary">#A4C8FF</color>
+    <color name="md_theme_primaryFixed">#D4E3FF</color>
+    <color name="md_theme_onPrimaryFixed">#001C3A</color>
+    <color name="md_theme_primaryFixedDim">#A4C8FF</color>
+    <color name="md_theme_onPrimaryFixedVariant">#004784</color>
+    <color name="md_theme_secondaryFixed">#D4E3FF</color>
+    <color name="md_theme_onSecondaryFixed">#061C35</color>
+    <color name="md_theme_secondaryFixedDim">#B4C8E8</color>
+    <color name="md_theme_onSecondaryFixedVariant">#354862</color>
+    <color name="md_theme_tertiaryFixed">#FFDAD5</color>
+    <color name="md_theme_onTertiaryFixed">#410000</color>
+    <color name="md_theme_tertiaryFixedDim">#FFB4A9</color>
+    <color name="md_theme_onTertiaryFixedVariant">#930002</color>
+    <color name="md_theme_surfaceDim">#D9DAE0</color>
+    <color name="md_theme_surfaceBright">#F9F9FF</color>
     <color name="md_theme_surfaceContainerLowest">#FFFFFF</color>
-    <color name="md_theme_surfaceContainerLow">#F3F4EF</color>
-    <color name="md_theme_surfaceContainer">#EEEEE9</color>
-    <color name="md_theme_surfaceContainerHigh">#E8E8E4</color>
-    <color name="md_theme_surfaceContainerHighest">#E2E3DE</color>
-    <color name="md_theme_primary_mediumContrast">#0B3218</color>
+    <color name="md_theme_surfaceContainerLow">#F3F3FA</color>
+    <color name="md_theme_surfaceContainer">#EDEDF4</color>
+    <color name="md_theme_surfaceContainerHigh">#E7E8EE</color>
+    <color name="md_theme_surfaceContainerHighest">#E1E2E8</color>
+    <color name="md_theme_primary_mediumContrast">#00437D</color>
     <color name="md_theme_onPrimary_mediumContrast">#FFFFFF</color>
-    <color name="md_theme_primaryContainer_mediumContrast">#2F5538</color>
+    <color name="md_theme_primaryContainer_mediumContrast">#3C75BA</color>
     <color name="md_theme_onPrimaryContainer_mediumContrast">#FFFFFF</color>
-    <color name="md_theme_secondary_mediumContrast">#374739</color>
+    <color name="md_theme_secondary_mediumContrast">#31445E</color>
     <color name="md_theme_onSecondary_mediumContrast">#FFFFFF</color>
-    <color name="md_theme_secondaryContainer_mediumContrast">#687969</color>
+    <color name="md_theme_secondaryContainer_mediumContrast">#637693</color>
     <color name="md_theme_onSecondaryContainer_mediumContrast">#FFFFFF</color>
-    <color name="md_theme_tertiary_mediumContrast">#032E49</color>
+    <color name="md_theme_tertiary_mediumContrast">#8C0002</color>
     <color name="md_theme_onTertiary_mediumContrast">#FFFFFF</color>
-    <color name="md_theme_tertiaryContainer_mediumContrast">#2E506D</color>
+    <color name="md_theme_tertiaryContainer_mediumContrast">#D20A0A</color>
     <color name="md_theme_onTertiaryContainer_mediumContrast">#FFFFFF</color>
     <color name="md_theme_error_mediumContrast">#8C0009</color>
     <color name="md_theme_onError_mediumContrast">#FFFFFF</color>
     <color name="md_theme_errorContainer_mediumContrast">#DA342E</color>
     <color name="md_theme_onErrorContainer_mediumContrast">#FFFFFF</color>
-    <color name="md_theme_background_mediumContrast">#F9FAF5</color>
-    <color name="md_theme_onBackground_mediumContrast">#1A1C1A</color>
-    <color name="md_theme_surface_mediumContrast">#F9FAF5</color>
-    <color name="md_theme_onSurface_mediumContrast">#1A1C1A</color>
-    <color name="md_theme_surfaceVariant_mediumContrast">#DEE4DB</color>
-    <color name="md_theme_onSurfaceVariant_mediumContrast">#3E453E</color>
-    <color name="md_theme_outline_mediumContrast">#5A6159</color>
-    <color name="md_theme_outlineVariant_mediumContrast">#767D74</color>
+    <color name="md_theme_background_mediumContrast">#F9F9FF</color>
+    <color name="md_theme_onBackground_mediumContrast">#191C20</color>
+    <color name="md_theme_surface_mediumContrast">#F9F9FF</color>
+    <color name="md_theme_onSurface_mediumContrast">#191C20</color>
+    <color name="md_theme_surfaceVariant_mediumContrast">#DEE2EE</color>
+    <color name="md_theme_onSurfaceVariant_mediumContrast">#3E434C</color>
+    <color name="md_theme_outline_mediumContrast">#5A5F69</color>
+    <color name="md_theme_outlineVariant_mediumContrast">#767B85</color>
     <color name="md_theme_scrim_mediumContrast">#000000</color>
-    <color name="md_theme_inverseSurface_mediumContrast">#2F312E</color>
-    <color name="md_theme_inverseOnSurface_mediumContrast">#F1F1EC</color>
-    <color name="md_theme_inversePrimary_mediumContrast">#A6D1AB</color>
-    <color name="md_theme_primaryFixed_mediumContrast">#567E5D</color>
+    <color name="md_theme_inverseSurface_mediumContrast">#2E3035</color>
+    <color name="md_theme_inverseOnSurface_mediumContrast">#F0F0F7</color>
+    <color name="md_theme_inversePrimary_mediumContrast">#A4C8FF</color>
+    <color name="md_theme_primaryFixed_mediumContrast">#3D76BB</color>
     <color name="md_theme_onPrimaryFixed_mediumContrast">#FFFFFF</color>
-    <color name="md_theme_primaryFixedDim_mediumContrast">#3E6446</color>
+    <color name="md_theme_primaryFixedDim_mediumContrast">#1D5DA1</color>
     <color name="md_theme_onPrimaryFixedVariant_mediumContrast">#FFFFFF</color>
-    <color name="md_theme_secondaryFixed_mediumContrast">#687969</color>
+    <color name="md_theme_secondaryFixed_mediumContrast">#637693</color>
     <color name="md_theme_onSecondaryFixed_mediumContrast">#FFFFFF</color>
-    <color name="md_theme_secondaryFixedDim_mediumContrast">#506051</color>
+    <color name="md_theme_secondaryFixedDim_mediumContrast">#4A5D79</color>
     <color name="md_theme_onSecondaryFixedVariant_mediumContrast">#FFFFFF</color>
-    <color name="md_theme_tertiaryFixed_mediumContrast">#567896</color>
+    <color name="md_theme_tertiaryFixed_mediumContrast">#E41F17</color>
     <color name="md_theme_onTertiaryFixed_mediumContrast">#FFFFFF</color>
-    <color name="md_theme_tertiaryFixedDim_mediumContrast">#3D5F7D</color>
+    <color name="md_theme_tertiaryFixedDim_mediumContrast">#BC0004</color>
     <color name="md_theme_onTertiaryFixedVariant_mediumContrast">#FFFFFF</color>
-    <color name="md_theme_surfaceDim_mediumContrast">#DADAD6</color>
-    <color name="md_theme_surfaceBright_mediumContrast">#F9FAF5</color>
+    <color name="md_theme_surfaceDim_mediumContrast">#D9DAE0</color>
+    <color name="md_theme_surfaceBright_mediumContrast">#F9F9FF</color>
     <color name="md_theme_surfaceContainerLowest_mediumContrast">#FFFFFF</color>
-    <color name="md_theme_surfaceContainerLow_mediumContrast">#F3F4EF</color>
-    <color name="md_theme_surfaceContainer_mediumContrast">#EEEEE9</color>
-    <color name="md_theme_surfaceContainerHigh_mediumContrast">#E8E8E4</color>
-    <color name="md_theme_surfaceContainerHighest_mediumContrast">#E2E3DE</color>
-    <color name="md_theme_primary_highContrast">#012910</color>
+    <color name="md_theme_surfaceContainerLow_mediumContrast">#F3F3FA</color>
+    <color name="md_theme_surfaceContainer_mediumContrast">#EDEDF4</color>
+    <color name="md_theme_surfaceContainerHigh_mediumContrast">#E7E8EE</color>
+    <color name="md_theme_surfaceContainerHighest_mediumContrast">#E1E2E8</color>
+    <color name="md_theme_primary_highContrast">#002345</color>
     <color name="md_theme_onPrimary_highContrast">#FFFFFF</color>
-    <color name="md_theme_primaryContainer_highContrast">#254B2E</color>
+    <color name="md_theme_primaryContainer_highContrast">#00437D</color>
     <color name="md_theme_onPrimaryContainer_highContrast">#FFFFFF</color>
-    <color name="md_theme_secondary_highContrast">#17251A</color>
+    <color name="md_theme_secondary_highContrast">#0E233C</color>
     <color name="md_theme_onSecondary_highContrast">#FFFFFF</color>
-    <color name="md_theme_secondaryContainer_highContrast">#374739</color>
+    <color name="md_theme_secondaryContainer_highContrast">#31445E</color>
     <color name="md_theme_onSecondaryContainer_highContrast">#FFFFFF</color>
-    <color name="md_theme_tertiary_highContrast">#00243C</color>
+    <color name="md_theme_tertiary_highContrast">#4E0001</color>
     <color name="md_theme_onTertiary_highContrast">#FFFFFF</color>
-    <color name="md_theme_tertiaryContainer_highContrast">#224662</color>
+    <color name="md_theme_tertiaryContainer_highContrast">#8C0002</color>
     <color name="md_theme_onTertiaryContainer_highContrast">#FFFFFF</color>
     <color name="md_theme_error_highContrast">#4E0002</color>
     <color name="md_theme_onError_highContrast">#FFFFFF</color>
     <color name="md_theme_errorContainer_highContrast">#8C0009</color>
     <color name="md_theme_onErrorContainer_highContrast">#FFFFFF</color>
-    <color name="md_theme_background_highContrast">#F9FAF5</color>
-    <color name="md_theme_onBackground_highContrast">#1A1C1A</color>
-    <color name="md_theme_surface_highContrast">#F9FAF5</color>
+    <color name="md_theme_background_highContrast">#F9F9FF</color>
+    <color name="md_theme_onBackground_highContrast">#191C20</color>
+    <color name="md_theme_surface_highContrast">#F9F9FF</color>
     <color name="md_theme_onSurface_highContrast">#000000</color>
-    <color name="md_theme_surfaceVariant_highContrast">#DEE4DB</color>
-    <color name="md_theme_onSurfaceVariant_highContrast">#1F261F</color>
-    <color name="md_theme_outline_highContrast">#3E453E</color>
-    <color name="md_theme_outlineVariant_highContrast">#3E453E</color>
+    <color name="md_theme_surfaceVariant_highContrast">#DEE2EE</color>
+    <color name="md_theme_onSurfaceVariant_highContrast">#1F242D</color>
+    <color name="md_theme_outline_highContrast">#3E434C</color>
+    <color name="md_theme_outlineVariant_highContrast">#3E434C</color>
     <color name="md_theme_scrim_highContrast">#000000</color>
-    <color name="md_theme_inverseSurface_highContrast">#2F312E</color>
+    <color name="md_theme_inverseSurface_highContrast">#2E3035</color>
     <color name="md_theme_inverseOnSurface_highContrast">#FFFFFF</color>
-    <color name="md_theme_inversePrimary_highContrast">#CBF7CF</color>
-    <color name="md_theme_primaryFixed_highContrast">#254B2E</color>
+    <color name="md_theme_inversePrimary_highContrast">#E3ECFF</color>
+    <color name="md_theme_primaryFixed_highContrast">#00437D</color>
     <color name="md_theme_onPrimaryFixed_highContrast">#FFFFFF</color>
-    <color name="md_theme_primaryFixedDim_highContrast">#0C3419</color>
+    <color name="md_theme_primaryFixedDim_highContrast">#002D57</color>
     <color name="md_theme_onPrimaryFixedVariant_highContrast">#FFFFFF</color>
-    <color name="md_theme_secondaryFixed_highContrast">#374739</color>
+    <color name="md_theme_secondaryFixed_highContrast">#31445E</color>
     <color name="md_theme_onSecondaryFixed_highContrast">#FFFFFF</color>
-    <color name="md_theme_secondaryFixedDim_highContrast">#213024</color>
+    <color name="md_theme_secondaryFixedDim_highContrast">#1A2D47</color>
     <color name="md_theme_onSecondaryFixedVariant_highContrast">#FFFFFF</color>
-    <color name="md_theme_tertiaryFixed_highContrast">#224662</color>
+    <color name="md_theme_tertiaryFixed_highContrast">#8C0002</color>
     <color name="md_theme_onTertiaryFixed_highContrast">#FFFFFF</color>
-    <color name="md_theme_tertiaryFixedDim_highContrast">#052F4A</color>
+    <color name="md_theme_tertiaryFixedDim_highContrast">#620001</color>
     <color name="md_theme_onTertiaryFixedVariant_highContrast">#FFFFFF</color>
-    <color name="md_theme_surfaceDim_highContrast">#DADAD6</color>
-    <color name="md_theme_surfaceBright_highContrast">#F9FAF5</color>
+    <color name="md_theme_surfaceDim_highContrast">#D9DAE0</color>
+    <color name="md_theme_surfaceBright_highContrast">#F9F9FF</color>
     <color name="md_theme_surfaceContainerLowest_highContrast">#FFFFFF</color>
-    <color name="md_theme_surfaceContainerLow_highContrast">#F3F4EF</color>
-    <color name="md_theme_surfaceContainer_highContrast">#EEEEE9</color>
-    <color name="md_theme_surfaceContainerHigh_highContrast">#E8E8E4</color>
-    <color name="md_theme_surfaceContainerHighest_highContrast">#E2E3DE</color>
-    <color name="colorCustomPrimary1">#0B3218</color>
-    <color name="colorOnCustomPrimary1">#FFFFFF</color>
-    <color name="colorCustomPrimary1Container">#2F5538</color>
-    <color name="colorOnCustomPrimary1Container">#CAF6CE</color>
-    <color name="colorCustomPrimary2">#29411C</color>
-    <color name="colorOnCustomPrimary2">#FFFFFF</color>
-    <color name="colorCustomPrimary2Container">#4C653C</color>
-    <color name="colorOnCustomPrimary2Container">#FFFFFF</color>
-    <color name="colorCustomPrimary1_mediumContrast">#0B3218</color>
-    <color name="colorOnCustomPrimary1_mediumContrast">#FFFFFF</color>
-    <color name="colorCustomPrimary1Container_mediumContrast">#2F5538</color>
-    <color name="colorOnCustomPrimary1Container_mediumContrast">#FFFFFF</color>
-    <color name="colorCustomPrimary2_mediumContrast">#29411C</color>
-    <color name="colorOnCustomPrimary2_mediumContrast">#FFFFFF</color>
-    <color name="colorCustomPrimary2Container_mediumContrast">#4C653C</color>
-    <color name="colorOnCustomPrimary2Container_mediumContrast">#FFFFFF</color>
-    <color name="colorCustomPrimary1_highContrast">#012910</color>
-    <color name="colorOnCustomPrimary1_highContrast">#FFFFFF</color>
-    <color name="colorCustomPrimary1Container_highContrast">#254B2E</color>
-    <color name="colorOnCustomPrimary1Container_highContrast">#FFFFFF</color>
-    <color name="colorCustomPrimary2_highContrast">#112705</color>
-    <color name="colorOnCustomPrimary2_highContrast">#FFFFFF</color>
-    <color name="colorCustomPrimary2Container_highContrast">#314923</color>
-    <color name="colorOnCustomPrimary2Container_highContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow_highContrast">#F3F3FA</color>
+    <color name="md_theme_surfaceContainer_highContrast">#EDEDF4</color>
+    <color name="md_theme_surfaceContainerHigh_highContrast">#E7E8EE</color>
+    <color name="md_theme_surfaceContainerHighest_highContrast">#E1E2E8</color>
+    <color name="colorUFCColor">#900002</color>
+    <color name="colorOnUFCColor">#FFFFFF</color>
+    <color name="colorUFCColorContainer">#D20A0A</color>
+    <color name="colorOnUFCColorContainer">#FFFFFF</color>
+    <color name="colorUFCColor_mediumContrast">#8C0002</color>
+    <color name="colorOnUFCColor_mediumContrast">#FFFFFF</color>
+    <color name="colorUFCColorContainer_mediumContrast">#D20A0A</color>
+    <color name="colorOnUFCColorContainer_mediumContrast">#FFFFFF</color>
+    <color name="colorUFCColor_highContrast">#4E0001</color>
+    <color name="colorOnUFCColor_highContrast">#FFFFFF</color>
+    <color name="colorUFCColorContainer_highContrast">#8C0002</color>
+    <color name="colorOnUFCColorContainer_highContrast">#FFFFFF</color>
 
+    <color name="mainUFCColor">#D20A0A</color>
 </resources>
