--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,14 +5,14 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".view.MainActivity">
 
     <TextView
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:fontFamily="@font/sternbach"
-        android:text="UFC"
+        android:text="@string/ufc"
         android:textAlignment="textStart"
         android:textColor="@color/mainUFCColor"
         android:textSize="34sp"
@@ -29,7 +29,8 @@
         android:src="@drawable/profile_fighter_icon"
         app:layout_constraintBottom_toTopOf="@id/guideline"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ContentDescription" />
 
     <View
         android:id="@+id/header_line"
@@ -57,12 +58,14 @@
         android:layout_marginEnd="18dp"
         android:layout_marginBottom="18dp"
         android:clickable="true"
-
         android:focusable="true"
+        app:backgroundTint="?attr/colorTertiaryContainer"
+        app:backgroundTintMode="add"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/list_icon"
-        tools:ignore="ContentDescription" />
+        app:srcCompat="@drawable/layout_icon"
+        app:tint="?attr/colorOnTertiaryContainer"
+        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/grid_layout_button"
@@ -72,11 +75,14 @@
         android:clickable="true"
         android:focusable="true"
         android:visibility="gone"
+        app:backgroundTint="?attr/colorTertiaryContainer"
+        app:backgroundTintMode="add"
         app:layout_constraintBottom_toTopOf="@+id/change_layout_button"
         app:layout_constraintEnd_toEndOf="@id/change_layout_button"
         app:layout_constraintStart_toStartOf="@id/change_layout_button"
         app:srcCompat="@drawable/grid_icon"
-        tools:ignore="ContentDescription" />
+        app:tint="?attr/colorOnTertiaryContainer"
+        tools:ignore="ContentDescription, SpeakableTextPresentCheck" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/list_layout_button"
@@ -86,11 +92,14 @@
         android:clickable="true"
         android:focusable="true"
         android:visibility="gone"
+        app:backgroundTint="?attr/colorTertiaryContainer"
+        app:backgroundTintMode="add"
         app:layout_constraintBottom_toTopOf="@+id/grid_layout_button"
         app:layout_constraintEnd_toEndOf="@id/grid_layout_button"
         app:layout_constraintStart_toStartOf="@id/grid_layout_button"
         app:srcCompat="@drawable/list_icon"
-        tools:ignore="ContentDescription" />
+        app:tint="?attr/colorOnTertiaryContainer"
+        tools:ignore="ContentDescription, SpeakableTextPresentCheck" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
